--- a/appcrud/templates/appcrud/index.html
+++ b/appcrud/templates/appcrud/index.html
@@ -1,13 +1,19 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejemplo CRUD</title>
-</head>
-<body>
-    <div>
-        <h1>Este es el index</h1>
+{% extends "appcrud/base.html" %}
+{% load static %}
+   
+{% block contenido %}
+
+<div class=" p-5 bg-light text-dark">
+    <h1>Ejemplo de crud con Django</h1>
+    
+</div>
+<div class="container">
+    <div class="mt-4 ">
+        <p>Seleccione elementos desde el navbar</p>
     </div>
-</body>
-</html>
+</div>
+
+
+
+
+{% endblock contenido %}
