--- a/appcrud/templates/appcrud/crearpersona.html
+++ b/appcrud/templates/appcrud/crearpersona.html
@@ -1,6 +1,6 @@
 {% extends "appcrud/base.html" %}
 {% load static %}
-
+{% load crispy_forms_tags %}
 
 
 {% block contenido %}
@@ -11,15 +11,17 @@
         <div class="row">
             <div class="col-sm-4"></div>
             <div class="col-sm-4">
-               <div>
-                <h3>Registro de Persona</h3>
-               </div>
-               <form action="" method="post">
-             
+                <div class="p-5 border rounded">
+                    <h3>Registro de Persona</h3>
 
-
-
-               </form>
+                    <form action="" method="post" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        {{form | crispy}}
+                        <div class="mt-3">
+                            <input type="submit" value="Guardar">
+                        </div>
+                    </form>
+                </div>
 
             </div>
             <div class="col-sm-4"></div>
