--- a/appcrud/templates/appcrud/detallepersona.html
+++ b/appcrud/templates/appcrud/detallepersona.html
@@ -23,7 +23,13 @@
                         <p class="card-text"><span style="font-weight:bold">TELÉFONO: </span><br>{{persona.telefono}}</p>
 
                     </div>
+                    <div class="mt-3 d-flex justify-content-end">
+                        <a href="{% url 'modificarpersona' persona.rut %}"><input type="button" value="Modificar" class="btn btn-warning btn-sm">&nbsp;</a>
+                        <a href="{% url 'eliminarpersona' persona.rut %}"><input type="button" value="Eliminar" class="btn btn-danger btn-sm"> </a>
+
+                    </div>
                 </div>
+              
 
             </div>
             <div class="col-sm-4"></div>
