--- a/appcrud/templates/appcrud/eliminarpersona.html
+++ b/appcrud/templates/appcrud/eliminarpersona.html
@@ -9,23 +9,24 @@
     <div class='mt-4 mb-5'>
 
         <div class="row">
-            <div class="col-lg-3"></div>
-            <div class="col-lg-6">
+            <div class="col-lg-2"></div>
+            <div class="col-lg-8">
                 <div class="p-5 border rounded">
-                    <h3>Registro de Persona</h3>
-
+                    <h3>Elimnar Persona</h3>
+                    <h5>RUT - {{persona.rut}}</h5>
                     <form action="" method="post" enctype="multipart/form-data">
-                        {% csrf_token %}
-                        {{form | crispy}}
+                       {% csrf_token %}
+                       
                         <div class="mt-3">
-                            <input type="submit" value="Guardar" class="btn btn-success btn-lg">
-                            <a href="{% url "personas" %}"><input type="button" value="Cancelar" class="btn btn-danger btn-lg"></a>
+                            
+                            <input type="submit" value="Eliminar Persona" class="btn btn-danger btn-lg">
+                            <a href="{% url "personas" %}"><input type="button" value="Cancelar" class="btn btn-primary btn-lg"></a>
                         </div>
                     </form>
                 </div>
 
             </div>
-            <div class="col-lg-3"></div>
+            <div class="col-lg-2"></div>
         </div>
 
     </div>
