--- a/appcrud/templates/appcrud/modificarpersona.html
+++ b/appcrud/templates/appcrud/modificarpersona.html
@@ -12,13 +12,13 @@
             <div class="col-lg-3"></div>
             <div class="col-lg-6">
                 <div class="p-5 border rounded">
-                    <h3>Registro de Persona</h3>
-
+                    <h3>Editar Persona</h3>
+                    <h5>RUT - {{persona.rut}}</h5>
                     <form action="" method="post" enctype="multipart/form-data">
-                        {% csrf_token %}
-                        {{form | crispy}}
+                       {% csrf_token %}
+                       {{form | crispy}}
                         <div class="mt-3">
-                            <input type="submit" value="Guardar" class="btn btn-success btn-lg">
+                            <input type="submit" value="Guardar Cambios" class="btn btn-success btn-lg">
                             <a href="{% url "personas" %}"><input type="button" value="Cancelar" class="btn btn-danger btn-lg"></a>
                         </div>
                     </form>
