--- a/appcrud/templates/appcrud/eliminarpersona.html
+++ b/appcrud/templates/appcrud/eliminarpersona.html
@@ -12,17 +12,28 @@
             <div class="col-lg-2"></div>
             <div class="col-lg-8">
                 <div class="p-5 border rounded">
-                    <h3>Elimnar Persona</h3>
-                    <h5>RUT - {{persona.rut}}</h5>
-                    <form action="" method="post" enctype="multipart/form-data">
-                       {% csrf_token %}
-                       
-                        <div class="mt-3">
-                            
-                            <input type="submit" value="Eliminar Persona" class="btn btn-danger btn-lg">
-                            <a href="{% url "personas" %}"><input type="button" value="Cancelar" class="btn btn-primary btn-lg"></a>
+                    <h3 class="text-center">Eliminar Persona</h3>
+                    <div class="alert alert-danger" role="alert">
+                        <strong>
+                            <h1>Está a punto de eliminar a la siguiente persona:</h1>
+                        </strong>
+                        <div class="mt-5">
+                            <h3>{{persona.nombre}} {{persona.apellido }} Rut:{{persona.rut}}</h3>
                         </div>
-                    </form>
+                    </div>
+
+
+
+
+                    <div class="mt-3">
+
+                        <button type="button" class="btn btn-danger btn-lg" data-bs-toggle="modal" data-bs-target="#myModal">
+                            Eliminar Persona
+                        </button>
+                        <a href="{% url 'personas' %}"><input type="button" value="Cancelar"
+                                class="btn btn-primary btn-lg"></a>
+                    </div>
+
                 </div>
 
             </div>
@@ -30,7 +41,38 @@
         </div>
 
     </div>
+    <!-- Button to Open the Modal -->
+    
 
+    <!-- The Modal -->
+    <div class="modal fade" id="myModal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+
+                <!-- Modal Header -->
+                <div class="modal-header">
+                    <h4 class="modal-title">Importante</h4>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+
+                <!-- Modal body -->
+                <div class="modal-body">
+                    Esta seguro que desea eliminar a {{persona.nombre}} {{persona.apellido}}
+                </div>
+
+                <!-- Modal footer -->
+                <div class="modal-footer">
+                    <form action="" method="post" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        
+                        <input type="submit" value="Confirmar Eliminación" class="btn btn-danger btn-lg">
+                        
+                    </form>
+                </div>
+
+            </div>
+        </div>
+    </div>
 
 </div>
 
