Login template ok

--- a/appcrud/templates/appcrud/detallepersona.html
+++ b/appcrud/templates/appcrud/detallepersona.html
@@ -24,8 +24,8 @@
 
                     </div>
                     <div class="mt-3 d-flex justify-content-end">
-                        <a href="{% url 'modificarpersona' persona.rut %}"><input type="button" value="Modificar" class="btn btn-warning btn-sm">&nbsp;</a>
-                        <a href="{% url 'eliminarpersona' persona.rut %}"><input type="button" value="Eliminar" class="btn btn-danger btn-sm"> </a>
+                        <a href="{% url 'modificarpersona' persona.rut %}" role="button"  class="btn btn-warning btn-lg text-light mx-2" >Modificar</a>
+                        <a href="{% url 'eliminarpersona' persona.rut %}" role="button" class="btn btn-danger btn-lg ">Eliminar</a>
 
                     </div>
                 </div>
