--- a/appcrud/templates/appcrud/base.html
+++ b/appcrud/templates/appcrud/base.html
@@ -39,6 +39,10 @@
                             <a class="dropdown-item" href="#">Action 2</a>
                         </div>
                     </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link px-5 text-light" href="{% url "login" %}" ><strong>Inicio de Sesión</strong></a>
+                    </li>
                 </ul>
 
             </div>
