--- a/appcrud/templates/appcrud/base.html
+++ b/appcrud/templates/appcrud/base.html
@@ -41,7 +41,15 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link px-5 text-light" href="{% url "login" %}" ><strong>Inicio de Sesión</strong></a>
+                        {% if user.is_authenticated %}
+                            <form action="{% url 'logout' %}" method="post">
+                                {% csrf_token %}
+                                <button class="nav-link px-5 text-light" type="submit" >Bienvenido, <strong>{{user.username}}  | Cerrar Sesión</strong></button>
+                            </form> 
+                        {% else %}
+                            <a class="nav-link px-5 text-light" href="{% url 'login' %}" ><strong>Inicio de Sesión</strong></a>
+                        {% endif %}
+
                     </li>
                 </ul>
 
