--- a/appcrud/templates/appcrud/base.html
+++ b/appcrud/templates/appcrud/base.html
@@ -11,6 +11,7 @@
 
     <!-- Latest compiled JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 
 <body>
@@ -56,6 +57,56 @@
             </div>
         </div>
     </nav>
+
+    {% if messages %} 
+
+        {% for message in messages %}
+            {% if message.level == 25 %}
+              {% comment %}   <div class="alert alert-success alert-dismissible mt-3">
+                    <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+                    <strong>Operación Realizada: </strong>{{message}} 
+                </div> {% endcomment %}
+                <script>
+                    Swal.fire({
+                        title: 'Operación exitosa!',
+                        text: '{{message}}',
+                        icon: 'success',
+                        confirmButtonText: 'Ok'
+                      })
+                </script>
+            {% endif %}
+            {% if message.level == 30 %}
+               {% comment %}  <div class="alert alert-warning alert-dismissible mt-3">
+                    <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+                    <strong>Alerta: </strong>{{message}} 
+                </div> {% endcomment %}
+                <script>
+                    Swal.fire({
+                        title: 'Alerta!',
+                        text: '{{message}}',
+                        icon: 'warning',
+                        confirmButtonText: 'Ok'
+                      })
+                </script>
+            {% endif %}
+            {% if message.level == 40 %}
+           {% comment %}  <div class="alert alert-danger alert-dismissible mt-3">
+                <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+                <strong>Importante: </strong>{{message}} 
+            </div> {% endcomment %}
+            <script>
+                Swal.fire({
+                    title: 'Importante!',
+                    text: '{{message}}',
+                    icon: 'error',
+                    confirmButtonText: 'Ok'
+                  })
+            </script>
+        {% endif %}
+        {% endfor %}
+  
+{% endif %}
+
 {% block contenido %}
 
 
